# NOMITOKU

./: .gitignore  Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend-react  Dockerfile.frontend-react.prod  PROJECT_OVERVIEW.md  docker-compose.yaml  init.sql  pyproject.toml  requirements.txt
api/: db.py  main.py
api/cruds/: article.py  done.py  store.py  task.py  user.py
api/extra_modules/auth/: core.py  routers.py  schema.py
api/extra_modules/image/: core.py
api/routers/: article.py  done.py  store.py  task.py  user.py
frontend/: home.html  index.html  login.html  nearby.html  shop_detail.html  signup.html
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.jsx  main.jsx  style.css
frontend-react/src/components/: Header.jsx  PageTransition.jsx
frontend-react/src/context/: DirectionCtx.jsx  NavigationContext.jsx
frontend-react/src/pages/: HomePage.jsx  IndexPage.jsx  LandingPage.jsx  LoginPage.jsx  NearbyPage.jsx  ShopDetailPage.jsx  SignupPage.jsx
frontend-react/src/utils/: direction.js  motion.js
frontend/js/: api.js  general.js
