[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "demo_app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = { version = "^0.20.0", extras = ["standard"] }
sqlalchemy = "^2.0.3"
pymysql = "^1.0.2"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.9"
requests = "^2.31.0"
pillow = "^10.2.0"
pillow-heif = "^0.15.0"


[tool.poetry.group.dev.dependencies]
faker = "^21.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
